# RawrXDA

./: .clang-format  .clangd  .codex_batch_commit.ps1  .codex_paths.txt  .cursorrules  .gitattributes  .gitignore  .ninja_deps  .ninja_log  .rawrxd_agent_config.json  .wiringdigestignore  .wiringdigestrules.json  00-FINAL_DELIVERY_SUMMARY.md  47_CRITICAL_ISSUES_INTEGRATION_SUMMARY.md  ACTION_HEAP_DIAGNOSTICS.md  ACTION_REPORT.md  ACTION_REPORT_2.md  ADVANCED_FEATURES_COMPLETION.md  ADVANCED_OPERATIONS_FINAL_STATUS.md  ADVANCED_REFACTORING_ENGINE_FINAL_STATUS.md  ADVANCED_REFACTORING_ENHANCEMENTS.md  AGENT-1-source-recovery.ps1  AGENT-2-RECOMMENDATION.txt  AGENT-3-BuildConsolidation.ps1  AGENTIC_FRAMEWORK_IMPLEMENTATION_COMPLETE.md  AGENTIC_IDE_BUILD_SUCCESS.md  AGENTIC_LAZY_INIT_COMPLETION_REPORT.md  AGENTIC_LOOPS_INTEGRATION_GUIDE.md  AGENTIC_LOOPS_QUICK_REFERENCE.md  AGENTIC_MENU_IMPLEMENTATION_COMPLETE.md  AGENTIC_PLANNING_ORCHESTRATOR_DELIVERY.md  AGENTIC_PLANNING_ORCHESTRATOR_GUIDE.md  AGENT_FRAMEWORK_IMPROVEMENTS.md  AGENT_INFERENCE_AUDIT.md  AGENT_LOGIC_AUDIT_COMPLETE.md  AGENT_OPERATIONS_PRODUCTION_WIRING.md  AICompletionIntegration.asm  AI_Integration.cpp  AMPHIBIOUS_FULL_ML_ASSEMBLY_WIRING.md  AMPHIBIOUS_ML64_COMPLETE.md  (+1480 more)
Full Source/extension_registry/: CMakeLists.txt
RawrXD-ModelLoader/: CMakeLists.txt  RawrXD-ModelLoader.cpp  hexmag_engine.py  model-llm-harvester.asm
RawrXD-ModelLoader/docs/: BRUTAL-GZIP.md
RawrXD-ModelLoader/kernels/: deflate_brutal_masm.asm  deflate_brutal_neon.S  deflate_godmode_masm.asm  deflate_neon.S  flash_attn_avx2.cc  matmul_kernel_avx2.cc  q4_0_gemm_avx2.cc  q8_0_avx2.cc
RawrXD-ModelLoader/scripts/: build.ps1
RawrXD-ModelLoader/services/: test_smoke.py
RawrXD-ModelLoader/src/: chromatic_main.cpp
RawrXD-ModelLoader/tests/: bench_deflate_50mb.cpp  bench_deflate_brutal_arm64.cpp  bench_deflate_brutal_speed.cpp  bench_deflate_std.cpp  bench_flash_asm_puppeteer.cpp  bench_q4_0_end2end.cpp  gguf_inference_cli.cpp
Ship/tools/: CMakeLists.txt  cli_main.cpp  stress_test.cpp
build-aperture-mgr/: CMakeLists.txt
reconstructed/GlyphSmith/: CMakeLists.txt
reconstructed/NoRefusalPayload/: CMakeLists.txt  README.md  build.ps1
reconstructed/OOP-AI-Model/: CMakeLists.txt  minimal.ps1
src/agentic/: AGENTIC_AUDIT.md  AUDIT.md  AdvancedAgentCoordinator.cpp  AdvancedAgentCoordinator.h  AgentOllamaClient.cpp  AgentOllamaClient.h  AgentOrchestrator.cpp  AgentOrchestrator.h  AgentToolHandlers.cpp  AgentToolHandlers.h  AgentToolHandlers_raw.txt  AgentTranscript.h  AgenticCopilotIntegration.cpp  AgenticNavigator.cpp  AgenticPlanningOrchestrator.cmake  BUILD_AND_INTEGRATION_GUIDE.md  BackendEmissionService.cpp  BackendEmissionService.h  Balanced_Cut.asm  BoundedAgentLoop.cpp  BoundedAgentLoop.h  CMakeLists.txt  COMPLETE_LOGIC_SUMMARY.md  CRITICAL_ISSUES_COMPLETE_IMPLEMENTATION.cpp  Clean_Stage3.asm  DeterministicReplayEngine.cpp  DeterministicReplayEngine.h  DiffEngine.cpp  DiffEngine.h  DiskRecoveryAgent.cpp  DiskRecoveryAgent.h  DiskRecoveryToolHandler.cpp  DiskRecoveryToolHandler.h  DiskRecoveryToolHandler_fixed.cpp  ErrorRecoveryManager.cpp  ErrorRecoveryManager.h  Extreme_Cut.asm  FIMPromptBuilder.cpp  FIMPromptBuilder.h  Final_v2.asm  (+149 more)
src/ai/: CMakeLists.txt  ai_assistant_engine.cpp  ai_assistant_engine.h  ai_completion_provider_real.cpp  ai_completion_provider_real.hpp  ai_completion_unified.cpp  ai_ide_integration.cpp  ai_ide_integration.h  ai_inference_real.cpp  ai_model_caller_internal.h  ai_model_caller_real.cpp  ai_model_caller_unified.cpp  codebase_rag.cpp  codebase_rag.hpp  digestion_engine.cpp  digestion_engine.h  digestion_scanner.asm  embedding_provider.cpp  gguf_parser.cpp  gguf_parser.h  memory_mapped_file.cpp  memory_mapped_file.h  multi_file_reasoning.cpp  repo_refactor_engine.cpp  semantic_code_search.cpp  streaming_gguf_loader_qt.cpp  streaming_gguf_loader_qt.h  symbol_graph_indexer.cpp  test_minimal_streaming.cpp  test_streaming_gguf_loader.cpp  token_generator.cpp  token_generator.h  universal_model_router.cpp  universal_model_router.h  workspace_embeddings.cpp
src/auth/: AUTH_FOLDER_AUDIT.md  CMakeLists.txt  QuantumAuthUI.cpp  QuantumAuthUI.hpp  enterprise_auth_manager.cpp  jwt_validator.cpp  rbac_engine.cpp  rbac_engine.hpp
src/core/: 70b_gguf_hotpatch.cpp  70b_gguf_hotpatch.h  CLI_CONTRACT_v1.0.md  CMakeLists.txt  ConfigurationValidator.cpp  ConfigurationValidator.h  DiskRecoveryAgent.cpp  DiskRecoveryAgent.h  EditorEngineFactory.cpp  MonacoCoreEngine.cpp  README.md  RichEditEditorEngine.cpp  WebView2Container.h  WebView2Container_stubs.cpp  WebView2EditorEngine.cpp  _test_uhm_include.cpp  accelerator_router.cpp  accelerator_router.h  adaptive_pipeline_parallel.cpp  adaptive_pipeline_parallel.h  address_hotpatcher.cpp  address_hotpatcher.hpp  agent_capability_audit.hpp  agent_fallback_tool_router.hpp  agent_guardrails.cpp  agent_memory_indexer.cpp  agent_safety_contract.cpp  (+503 more)
standalone/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.conflict_backup  CMakeLists.txt.new  CTestTestfile.cmake  Full-Manifestation-Tests.ps1  README.md  README_MMF_DIAGNOSTIC.md  RawrXD.Autonomy.Tests.ps1  RawrXD.ModelLoader.Tests.ps1  RawrXD.Scaffolds.Tests.ps1  RawrXD.Win32Deployment.Tests.ps1  Sovereign_Test_Cases.ps1  TEST_EXECUTION_GUIDE.md  Test-MASM-NASM-Parity.ps1  Test-UniversalCompiler.ps1  Test-VSIXLoaderAgentic.ps1  agentic_orchestrator_failure_smoke_test.cpp  bench_compact_zlib.cpp  bench_deflate_50mb.cpp  bench_deflate_masm.cpp  bench_deflate_qt.cpp  bench_deflate_std.cpp  bench_flash_all_quant.cpp  bench_flash_asm_puppeteer_x3.cpp  bench_q2k_vs_q4k_e2e.cpp  benchmark_coldburst.cpp  benchmark_completions.cpp  benchmark_completions_full.cpp  benchmark_ioring_performance.cpp  benchmark_production_verification.cpp  benchmark_zerocopy_microbench.cpp  e2e_integration_scenarios.ps1  fix_tool_registry_test.ps1  fix_tool_registry_test2.ps1  fuzz_test_agentic_file_operations.cpp  g_feature_manifest_stub.cpp  gguf_link_stubs.cpp  harness_sovereign_thermal.cpp  harness_vram_budget.cpp  license_validation_suite.cpp  (+73 more)
(+40708 files in other folders)
